Add 'getQuestion' endpoint, add dynamic 'question/[1]' page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,9 @@
 :root {
   /* Colors */
   --wtq-green: #6ac684;
+  --wtq-green-dark: #0a9f34;
   --wtq-red: #f45909;
+  --wtq-blue-dark: #020555;
 
   --header-backgorund: #fff;
 
