--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@
   --wtq-green-dark: #0a9f34;
   --wtq-red: #f45909;
   --wtq-blue-dark: #020555;
+  --wtq-blue-light: #3c82f3;
 
   --header-backgorund: #fff;
 
