--- a/components/Footer/Footer.module.scss
+++ b/components/Footer/Footer.module.scss
@@ -1,3 +1,4 @@
+@use '../../styles//variables.scss' as *;
 .footerContainer {
-  background-color: var(--header-backgorund);
+  background-color: $header-backgorund;
 }
