--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@use '../../styles/variables.scss' as *;
+
 .headerContainer {
-  background-color: var(--header-backgorund);
+  background-color: $header-backgorund;
 }
